# autonomous-dev-env

./: README.md  copier.yaml  pyproject.toml  pyproject.toml.jinja
.devcontainer/: Dockerfile  devcontainer.json
project_template/: .gitignore.jinja  README.md.jinja  pyproject.toml.jinja
project_template/.devcontainer/: devcontainer.json.jinja
src/: server.py
tools/mcp_mock/: api_sample_using_mcp_mock.py
